2005-07-14  Adele Peterson  <adele@apple.com>

        Merged fix for:
        <rdar://problem/4125127> [WebKit] horizontal rulers don't render on Safari on web.apple.com

        * WebCoreSupport.subproj/WebImageData.m:
        (-[WebImageData _checkSolidColor:]):

2005-07-14  Adele Peterson  <adele@apple.com>

        Merged fix for :
        <rdar://problem/4118278> mail divide by zero navigating messages

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer _extendGlyphToWidthMapToInclude:font:]):

=== WebKit-412.0.2 ===

2005-07-08  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John
        
        Changes to compile with gcc 4.0 build 5204
        
        The construct "variable = if ? then : else" is more strict about the types of 'then' and 'else'

        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem copyWithZone:]):
        * Misc.subproj/WebNSPasteboardExtras.m:
        (-[NSPasteboard _web_writeImage:URL:title:archive:types:]):
        * Misc.subproj/WebNSURLExtras.m:
        (-[NSURL _web_URLWithLowercasedScheme]):
        (-[NSString _web_mapHostNameWithRange:encode:makeString:]):
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge MIMETypeForPath:]):
        * WebCoreSupport.subproj/WebImageRendererFactory.m:
        (-[WebImageRendererFactory imageRendererWithBytes:length:MIMEType:]):
        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer initWithFont:usingPrinterFont:]):
        * WebView.subproj/WebFrame.m:
        (-[WebFrame _webDataRequestForData:MIMEType:textEncodingName:baseURL:unreachableURL:]):
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _styleFromFontAttributes:]):
        * WebView.subproj/WebView.m:
        (-[WebView _writeImageElement:withPasteboardTypes:toPasteboard:]):
        (-[WebView mainFrameTitle]):

=== Safari-412.0.1 ===

2005-05-24  Darin Adler  <darin@apple.com>
